--- a/style.css
+++ b/style.css
@@ -20,9 +20,15 @@
     color: rgb(0, 119, 255);
 }
 
-/* #buscadorBlog{
+#buscador{
+    background-color: rgb(233, 230, 230);
+    margin-top: 20px;
+    width: 80%;
     align-items: center;
-} */
+    border-radius: 5px;
+    box-shadow: 5px 5px 5px rgb(165, 165, 165);
+    margin-left: 10px;
+}   
 
 body{
     background-color:rgb(220, 220, 220);
@@ -62,7 +68,7 @@ article{
     background-color: lightblue;
     border-radius: 8px;
     box-shadow: 10px 5px 5px rgb(96, 96, 96);
-
+    margin-left: 10px;
 }
 h3{
 
